// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`read-org-file Should read org file by provided entry without start slash 1`] = `
{
  "content": "#+TITLE: some org file",
  "filePath": [
    "dir",
    "test.org",
  ],
}
`;

exports[`read-org-file Should read org file by provided entry with start slash 1`] = `
{
  "content": "#+TITLE: some org file",
  "filePath": [
    "dir",
    "nested",
    "test.org",
  ],
}
`;

exports[`read-org-file Should read org file by provided entry with single path 1`] = `
{
  "content": "#+TITLE: some org file",
  "filePath": [
    "test.org",
  ],
}
`;
